[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/particles_renderer/menu_bar.gd" type="Script" id=1]

[node name="MenuBar" type="Control"]
anchor_right = 1.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 2.0
margin_right = 800.0
margin_bottom = 22.0

[node name="MenuButtonFile" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
align = 0
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtonHelp" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 81.0
margin_bottom = 20.0
focus_mode = 2
text = "Help"
align = 0
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileFileDialog" type="FileDialog" parent="."]
margin_right = 416.0
margin_bottom = 184.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0

[node name="WindowDialogAbout" type="WindowDialog" parent="."]
margin_right = 160.0
margin_bottom = 120.0
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialogAbout"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -44.0
margin_right = 64.0
margin_bottom = 44.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
